# opr

./: .clang-format  .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENCE  README.md
cmake/: definitions.cmake  dependencies.cmake
cmake/macros/: message.cmake  options.cmake  vendors.cmake
cmake/modules/: FindSPDLOG.cmake
examples/: CMakeLists.txt  cpu.cpp  cuda.cpp  main.cpp
opr/: CMakeLists.txt
opr/backends/cpu/: add_cpu.cpp  add_cpu.h  add_node.cpp  add_node.h  const_node.cpp  const_node.h  cpu_buffer.cpp  cpu_buffer.h  op_factory_cpu.h  subtract_node.cpp  subtract_node.h  vec_add_node.h  vec_dot_node.h  vec_sub_node.h
opr/backends/cuda/: add_node.h  add_node_cuda.cu  add_node_cuda.h  const_node.h  const_node_cuda.cu  const_node_cuda.h  cuda_buffer.cpp  cuda_buffer.h  kernel.h  sub_node.h  vec_add_node.h  vec_dot_node.h  vec_sub_node.h
opr/examples/: CMakeLists.txt  main.cpp
opr/include/: add_node.h  buffer.h  const_node.h  dag.h  defines.h  graph.h  logger.h  node.h  op.h  op_factory.h  tensor.h
opr/src/: add_node.cpp  buffer.cpp  const_node.cpp  dag.cpp  graph.cpp  logger.cpp  op.cpp  tensor.cpp
scripts/: build.sh  run_example.sh
